--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,168 @@
-<div>You are on the homepage</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/public/stylesheets/style.css">
+    <title>feddit</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">feddit</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item d-flex">
+                        <li class="nav-item">
+                            <div class="dropdown">
+                                <button type="button" class="btn btn-outline-primary dropdown-toggle"
+                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                                    Log In
+                                </button>
+                                <form class="dropdown-menu p-4">
+                                    <div class="mb-3">
+                                        <label for="exampleDropdownFormEmail2" class="form-label">Email address</label>
+                                        <input type="email" class="form-control" id="exampleDropdownFormEmail2"
+                                            placeholder="email@example.com">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleDropdownFormPassword2" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="exampleDropdownFormPassword2"
+                                            placeholder="Password">
+                                    </div>
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                                            <label class="form-check-label" for="dropdownCheck2">
+                                                Remember me
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Sign in</button>
+                                </form>
+                            </div>
+                            <!-- <button id="signin" type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome back!"
+                                        data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom" >Sign in</button> -->
+                        </li>
+                        <li class="nav-item">
+                            <!-- <button type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome!" data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom">Log In</button> -->
+                            <div class="dropdown">
+                                <button type="button" class="btn btn-outline-primary dropdown-toggle"
+                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                                    Sign Up
+                                </button>
+                                <form class="dropdown-menu p-4">
+                                    <div class="mb-3">
+                                        <label for="exampleDropdownFormEmail2" class="form-label">Enter an email</label>
+                                        <input type="email" class="form-control" id="exampleDropdownFormEmail2"
+                                            placeholder="email@example.com">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="exampleDropdownFormPassword2" class="form-label">Enter a
+                                            password</label>
+                                        <input type="password" class="form-control" id="exampleDropdownFormPassword2"
+                                            placeholder="Password">
+                                    </div>
+                                    <div class="mb-3">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Sign in</button>
+                                </form>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search feddit" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- /navbar -->
+
+        {{!-- categories --}}
+        <p class="text-center">Categories</p>
+        <div class="container">
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <div class="row">
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">Home Cooking</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">Favorite Restaurants</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">Take-out</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">Secret Ingredients</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">Family Favorites</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary" type="button">You're eating what?!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{!-- /categories --}}
+
+        <section>
+            <div>
+                <img src="/public/images/homecook.png" alt="">
+            </div>
+        </section>
+
+        {{!-- new post --}}
+        <div class="container">
+            <form>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Whats on your plate?</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text"></div>
+                </div>
+                <label for="categories">Select a category:</label>
+                <select name="categories" id="categories">
+                    <option value="">---</option>
+                    <option value="homecooking">Home Cooking</option>
+                    <option value="favoriterest">Favotie Restaurant</option>
+                    <option value="takeout">Take-out</option>
+                    <option value="secreting">Secret Ingredients</option>
+                    <option value="familyfav">Family Favorites</option>
+                    <option value="secreting">Secret Ingredients</option>
+                </select>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        {{!-- /new post --}}
+
+        <main>
+            <p class="text-center">Featured</p>
+            {{{ body }}}
+        </main>
+        
+    </div>
+
+</body>
+
+</html>
