--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,7 +31,7 @@
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button type="button" class="btn btn-outline-primary dropdown-toggle"
-                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside" id="log">
                                     Log In
                                 </button>
                                 <form class="dropdown-menu p-4 login-form">
@@ -63,7 +63,7 @@
                             <!-- <button type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome!" data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom">Log In</button> -->
                             <div class="dropdown">
                                 <button type="button" class="btn btn-outline-primary dropdown-toggle"
-                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside" id="sign">
                                     Sign Up
                                 </button>
                                 <form class="dropdown-menu p-4 signup-form">
