--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,12 @@
 .container {
     margin-top: 40px;
 }
+
+/* .dashbtn {
+    text-decoration: none;
+}
+
+a {
+    color: blue;
+    text-decoration: none;
+} */
