--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item d-flex">
                     <li class="nav-item">
-                        <button class="btn btn-outline-primary"><a href="/dashboard" class="dashbtn">dashboard</a></button>
+                        <button class="btn btn-outline-primary"><a href="/dashboard">dashboard</a></button>
                     </li>
     
     
