--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
 
         {{!-- new post --}}
         <div class="container">
-            <form class="new-post-form">
+            <form class="post-form">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label" >Whats on your plate?</label>
                     <input type="text" class="form-control" id="post-title" name="post-title "aria-describedby="emailHelp" placeholder="Title...">
@@ -33,25 +33,10 @@
                         <span class="input-group-text">Tell me more</span>
                         <textarea class="form-control" id="post-content" name="post-content" aria-label="With textarea"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Post</button>
+                    <button type="submit" id="new-post" class="btn btn-primary">Post</button>
                 </div>
             </form>
         </div>
-        <section>
-  <h2>Create New Post</h2>
-
-  <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
-    </div>
-    <div>
-      <label for="post-url">Link</label>
-      <textarea id="post-content" name="post-content"></textarea>
-    </div>
-    <button type="submit" class="btn">Create</button>
-  </form>
-</section>
         {{!-- /new post --}}
         <ul class="post-list">
             {{#each posts as |post|}}
