--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-<body>
+<body class="body">
     
         <section>
             <div>
