--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,8 +37,8 @@
                 </ul>
     
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search feddit" aria-label="Search">
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
+                    <input class="form-control me-2 searchVal" type="search" placeholder="Search feddit" aria-label="Search">
+                    <button class="btn btn-outline-primary searchBtn" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -121,8 +121,8 @@
             
             
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search feddit" aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit">Search</button>
+                            <input class="form-control me-2 searchVal" type="search" placeholder="Search feddit" aria-label="Search">
+                            <button class="btn btn-outline-primary searchBtn" type="submit">Search</button>
                         </form>
                     </div>
                 </div>
