add search bar function

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -58,3 +58,4 @@
 
 <script src="/javascript/login.js"></script>
 <script src="/javascript/add-post.js"></script>
+<script src="/javascript/search.js"></script>
