--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -18,4 +18,5 @@
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
+<script src="/javascript/search.js"></script>
 {{/if}}
