--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,14 +38,13 @@
             </form>
         </div>
         {{!-- /new post --}}
-        <ul class="post-list">
+        <ul id="results" class="post-list">
             {{#each posts as |post|}}
-            <li>
+            <li class="post">
                 {{> post-info post }}
             </li>
             {{/each}}
         </ul>
-
         <main>
             {{{ body }}}
         </main>
