--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,18 +17,13 @@
 
 <body>
     
-        <section>
-            <div>
-                <img src="/public/images/homecook.png" alt="">
-            </div>
-        </section>
 
         {{!-- new post --}}
-        <div class="container">
+        <div class="container1">
             <form class="post-form">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label" >Whats on your plate?</label>
-                    <input type="text" class="form-control" id="post-title" name="post-title "aria-describedby="emailHelp" placeholder="Title...">
+                    <label for="exampleInputEmail1" class="form-label" ></label>
+                    <input type="text" class="form-control" id="post-title" name="post-title "aria-describedby="emailHelp" placeholder="Whats on your plate?">
                     <div class="input-group">
                         <span class="input-group-text">Tell me more</span>
                         <textarea class="form-control" id="post-content" name="post-content" aria-label="With textarea"></textarea>
