--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,10 +10,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/public/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <title>feddit</title>
-  {{!--
-  <link rel="stylesheet" href="/stylesheets/style.css"> --}}
 </head>
 
 {{> post-info post}}
