--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
   <title>feddit</title>
 </head>
 
-<p>Please log in or sign up to post or comment on feddit!</p>
+<p>Please log in or sign up to post/comment on feddit!</p>
 
 
 <script src="/javascript/login.js"></script>
