--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 .container1 {
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+    padding: 2em;
     background-image: url(../assets/yu-hosoi-qplKfNIP_5g-unsplash.jpg);
     background-size: 350px;
-    background-repeat: ;
     
 }
 
