additional styling for posts

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,3 +54,16 @@ html, body {
     margin-bottom: 10px;
     list-style-type: none;
 }
+
+article {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px 0px 10px 0px;
+    box-shadow: 5px 5px;
+}
+
+::-webkit-details-marker {
+    display: none;
+}
+
